--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,11 @@ jobs:
         cache: 'yarn'
     - run: yarn
     - run: yarn run build
-    - uses: mikeal/publish-to-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - run: git checkout 
+    - name: Commit Deploy
+      run: |
+          git config --global user.name 'Action Deploy'
+          git config --global user.email 'your-username@users.noreply.github.com'
+          git add -f dist/*
+          git commit -am "Automated deploy"
+          git push -f origin master:deploy
