--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
           git config --global user.name 'Action Deploy'
           git config --global user.email 'your-username@users.noreply.github.com'
-          git add -f dist/*
+          mv dist docs
+          git add -f docs/*
           git commit -am "Automated deploy"
           git push -f origin master:deploy
